# Mengshen-pinyin-font

./: .actrc  .bandit  .coverage  .dockerignore  .flake8  .gitignore  .gitmodules  .markdownlint.json  .pylintrc  CLAUDE.md  DUOYINZI_DICTIONARY.md  Dockerfile  FIX_PINYIN.md  GEMINI.md  HOW_TO_MAKE.md  HOW_TO_MAKE_EN.md  HOW_TO_MAKE_JP.md  LICENSE  NOTE.md  README.md  REDUNDANCY_ANALYSIS.md  REFACTOR.md  REFACTORED_TEST_PLAN.md  REFERENCE.md  TEST_REDUNDANCY_PLAN.md  act-commands.md  bandit.yaml  createHanziUnicodeJson.py  createUnicode2cidJson.py  cspell.json  docker-compose.yml  font2svgs.py  getPinyinAlphbets.py  get_alphabet_glyf4pinyin.py  lefthook.yml  make_json2otf.py  make_pinyin_glyph.py  make_template_json.py  make_template_jsons.py  otf2ttf.py  (+15 more)
.github/workflows/: ci-pipeline.yml  ci.yml  code-quality.yml  docker-build-test.yml  python-app.yml
doc/: DONATE.md  DUOYINZI_DICTIONARY.md  FIX_PINYIN.md  HOW_TO_APPLY_FONT_ON_ANDROOID.md  HOW_TO_MAKE_EN.md  HOW_TO_MAKE_JP.md
doc/note2myself/: NOTE.md  REFERENCE.md
docker/: .dockerignore  DOCKER.md  Dockerfile  docker-compose.yml  requirements.minimal.txt
imgs/: characteristic_point.afdesign  explain_han_serif.afdesign  explain_handwritten.afdesign  outline.ai
jsons/: metadata-for-pinyin.json  pinyin-alphabet-size.json  unicode-cid-mapping.json
outputs/: duoyinzi_exceptional_pattern.json  duoyinzi_pattern_one.txt  duoyinzi_pattern_two.json  marged-mapping-table.txt  merged-mapping-table.txt
res/download_unicode_tables/: joyokanjihyo_20101130.txt  touyoukanji_jitaihyou.txt
res/fonts/: alphabet4pinyin.json
res/phonics/: BIG5-mapping-table.txt  README.md  create_unicode_pinyin_map_table.py  marged-mapping-table.txt  overwrite.txt
res/pinyin-data/: merge_unihan.py
scripts/: docker-pipeline.sh
src/: GSUB_table.py  config.py  createHanziUnicodeJson.py  createUnicode2cidJson.py  dont_use_make_pinyin_glyph.py  font.py  font2svgs.py  main.py  make_template_jsons.py  name_table.py  path.py  pinyinFont.py  pinyin_getter.py  pinyin_glyph.py  removeWithoutHanziSVG.py  retrieve_latin_alphabet.py  secure_shell.py  shell.py  svgs2glifs.py  utility.py
src/legacy/: GSUB_table.py  config.py  font.py  main.py  make_template_jsons.py  name_table.py  offline_pinyin_loader.py  path.py  pinyin_getter.py  pinyin_glyph.py  retrieve_latin_alphabet.py  shell.py  utility.py
src/refactored/: __init__.py  font_types.py  types.py
tests/: README.md  __init__.py  conftest.py
tests/characterization/: test_legacy_behavior.py
tests/fixtures/: __init__.py  mock_factory.py
tests/integration/: __init__.py  test_architecture_refactoring.py  test_complete_pipeline.py  test_dictionary_generation.py  test_font_generation.py  test_meta.py  test_security_pipeline.py  test_tdd_pipeline.py  test_validation.py
tests/performance/: test_basic_performance.py
tests/security/: __init__.py  test_path_validation.py  test_security_consolidated.py  test_security_consolidated.py.bak  test_shell_injection.py  test_shell_security.py
tests/unit/: __init__.py  test_data_structure_modernization.py  test_final_integration.py  test_python_modernization.py  (+3 more)
tools/: convert_otf2ufo.py  convert_ufo2oft.py  count_character.py  createduoyinziJson.py  find_circular_reference_gid.py  make_json2otf.py  orjson_test.py  shell.py
unicode_tables/: big5_2003-u2b.txt
(+138 files in other folders)
