[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mengshen-pinyin-font"
version = "2.0.0"
description = "Chinese pinyin font generator with homograph support"
authors = [
    {name = "MaruTama", email = "noreply@github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml",
    "requests",
    "pypinyin",
]

[project.urls]
Homepage = "https://github.com/MaruTama/Mengshen-pinyin-font"
Repository = "https://github.com/MaruTama/Mengshen-pinyin-font"

[project.scripts]
mengshen-font = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | outputs
  | tmp
  | tools
  | res/pinyin-data
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["refactored", "mengshen_font"]
skip_glob = [
    "outputs/*",
    "tmp/*", 
    "tools/*",
    "res/pinyin-data/*",
    "build/*",
    "dist/*"
]

[tool.bandit]
exclude_dirs = ["tests", "tmp", "outputs"]
skips = ["B101"]  # Skip assert_used test
